--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
   <html>
-    <head></head>
-    <body>a</body>
+    <head>
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+      <link href="style.css" rel="stylesheet">
+    </head>
+    <body></body>
   </html>
