--- a/index.html
+++ b/index.html
@@ -4,5 +4,8 @@
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
       <link href="style.css" rel="stylesheet">
     </head>
-    <body></body>
+    <body>
+      <div class="body">
+      </div>
+    </body>
   </html>
