--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
       <div class="body">
-        <p>Hi, I'm</p>
+        <p class="mt-1 mr-1">Hi, I'm</p>
       </div>
     </body>
   </html>
