--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
       <div class="body">
-        <p class="pt-5 pr-5">Hi, I'm</p>
+        <p class="pt-5 pl-5">Hi, I'm</p>
       </div>
     </body>
   </html>
