--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     </head>
     <body>
       <div class="body">
-        <p class="pt-5 pl-5">Hi, I'm</p>
+        <div class="mt-5 ml-5">
+          <p>Hi, I'm</p>
+        </div>
       </div>
     </body>
   </html>
