--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
       <div class="body">
-        <div class="mt-5 ml-5">
+        <div class="pt-5 pl-5">
           <p>Hi, I'm</p>
         </div>
       </div>
