--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
       <div class="body">
         <div class="pt-ps-5">
-          <p>HI, I'M</p>
+          <p class="p1">HI, I'M</p>
         </div>
       </div>
     </body>
