--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
       <div class="body">
-        <div class="pt-ps-5">
+        <div class="pt-s-5">
           <p class="p1">HI, I'M</p>
         </div>
       </div>
