--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
       <div class="body">
         <div class="pt-5 ps-5">
-          <p class="p1">HI, I'M</p>
+          <p class="p1">hi, I'm</p>
         </div>
       </div>
     </body>
