--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       <div class="body">
         <div class="pt-5 ps-5">
           <p class="p1">hi, I'm</p>
+          <p class="name">Jennifer Angelina</p>
         </div>
       </div>
     </body>
