--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <html>
     <head>
       <link href="https://fonts.googleapis.com/css2?family=Epilogue&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,800&display=swap" rel="stylesheet">
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
       <link href="style.css" rel="stylesheet">
     </head>
