--- a/index.html
+++ b/index.html
@@ -2,16 +2,30 @@
   <html>
     <head>
       <link href="https://fonts.googleapis.com/css2?family=Epilogue&display=swap" rel="stylesheet">
-      <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,800&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,600;1,500&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Chivo&family=Playfair+Display:ital,wght@0,600;1,500&display=swap" rel="stylesheet">
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
       <link href="style.css" rel="stylesheet">
     </head>
     <body>
-      <div class="body">
-        <div class="pt-5 ps-5">
-          <p class="p1">hi, I'm</p>
-          <p class="fullname">Jennifer Angelina</p>
+      <nav class="navbar navbar-expand">
+        <div class="container-fluid">
+            <div class="navbar-nav">
+              <a class="nav-link about hover1" href="#">about</a>
+              <a class="nav-link hover1" href="#">projects</a>
+            </div>
+          </div>
         </div>
+      </nav>
+
+      <div class="padding1">
+        <p class="p1">HI, I'M</p>
+        <p class="fullname">Jennifer Angelina</p>
+        <p class="p2">- aspiring front-end web developer -</p>
+        <pre class="p3">
+          i'm a psychology student who discovered
+          the magic of programming.
+        </pre>
       </div>
     </body>
   </html>
