--- a/projects/projects.html
+++ b/projects/projects.html
@@ -4,28 +4,23 @@
       <link href="https://fonts.googleapis.com/css2?family=Epilogue&display=swap" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,600;1,500&display=swap" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css2?family=Chivo&family=Playfair+Display:ital,wght@0,600;1,500&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap" rel="stylesheet">
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
-      <link href="style.css" rel="stylesheet">
+      <link href="../style.css" rel="stylesheet">
     </head>
     <body>
       <nav class="navbar navbar-expand">
         <div class="container-fluid">
             <div class="navbar-nav">
-              <a class="nav-link about hover1" href="#">about</a>
-              <a class="nav-link hover1" href="#">projects</a>
+                <a class="nav-link home hover1 active" href="../index/index.html">home</a>
+                <a class="nav-link about hover1 active" href="../about/about.html">about</a>
+                <a class="nav-link projects hover1 disabled" href="../projects/projects.html">projects</a>
+                <a class="nav-link resume hover1 active" href="../resume/resume.html">resume</a>
+                <a class="nav-link hover1 active" href="../contact/contact.html">contact</a>
             </div>
           </div>
         </div>
       </nav>
-
-      <div class="padding1">
-        <p class="p1">HI, I'M</p>
-        <p class="fullname">Jennifer Angelina</p>
-        <p class="p2">- aspiring front-end web developer -</p>
-        <pre class="p3">
-          i'm a psychology student who discovered
-          the magic of programming.
-        </pre>
-      </div>
     </body>
   </html>
