--- a/index/index.html
+++ b/index/index.html
@@ -2,8 +2,9 @@
   <html>
     <head>
       <link href="https://fonts.googleapis.com/css2?family=Epilogue&display=swap" rel="stylesheet">
-      <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,600;1,500&display=swap" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css2?family=Chivo&family=Playfair+Display:ital,wght@0,600;1,500&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap" rel="stylesheet">
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
       <link href="../style.css" rel="stylesheet">
     </head>
@@ -26,8 +27,8 @@
         <p class="fullname">Jennifer Angelina</p>
         <p class="p2">- aspiring front-end web developer -</p>
         <pre class="p3">
-          i'm a psychology student who discovered
-          the magic of programming.
+         i'm a psychology student who discovered
+         the magic of programming.
         </pre>
       </div>
     </body>
