--- a/contact/contact.html
+++ b/contact/contact.html
@@ -23,13 +23,13 @@
       </nav>
 
       <div class="padding1">
-        <span><i class="fas fa-address-book blue icon address"></i><span class="p8">Kendangsari O/24</span></span>
+        <span class="span1"><i class="fas fa-address-book blue icon address"></i><span class="p8">Kendangsari O/24</span>
         <br>
         <i class="fas fa-phone blue icon telephone"></i><span class="p8">+62-896-0872-4280</span>
         <br>
         <i class='fas fa-envelope blue icon email'></i><a class="a1" href="mailto:email@example.com?cc=jenniferangelina.js@gmail.com"><span class="p8">jenniferangelina.js@gmail.com</span></a>
         <br>
-        <i class="fa fa-linkedin-square blue icon"></i><a class="a1" href="https://www.linkedin.com/in/jennifer-angelina-880b0224a/"><span class="p8">https://www.linkedin.com/in/jennifer-angelina-880b0224a/</span></a>
+        <i class="fa fa-linkedin-square blue icon"></i><a class="a1" href="https://www.linkedin.com/in/jennifer-angelina-880b0224a/"><span class="p8 margin1">https://www.linkedin.com/in/jennifer-angelina-880b0224a/</span></a>
       </div>
     </body>
   </html>
